--- a/resume.html
+++ b/resume.html
@@ -1,70 +1,83 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 	<head>
+		<meta charset="UTF-8">
 		<title>Wendy G. Bite | Résumé</title>
 		<link rel="stylesheet" href="styles/main.css">
 	</head>
 	<body>
 		
+		<header>
+
 		<h1>Wendy G. Bite</h1>
 		
-		<nav>
+			<nav>
 			<a href="index.html">About Me</a>
 			|
 			<strong>Résumé</strong>
 
-			<div class="verticalLine">
+			</nav>
 
-		</nav>
+			<div class="verticalLine">
+			
+		</header>
 		
-		
-		<h2>Résumé</h2>
+		<main>
+
+			<section>
+
+			<h2>Résumé</h2>
 				
-		<p>I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my typewriter to 100 words per minute on my new MacBook Pro. They also taught me how to be an <strong>awesome</strong> Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.
-		</p>
+			<p>I recently graduated from a Web Development course at General Assembly where I increased my typing speed from 10 words per minute on my typewriter to 100 words per minute on my new MacBook Pro. They also taught me how to be an <strong>awesome</strong> Web Developer. During my spare time, I enjoy senior water aerobics, pickling, and spending time with my great grand children.
+			</p>
 		
-		<h3>Relevant Experience</h3>
+			<h3>Relevant Experience</h3>
 		
-		<ul>
-			<li>
-				<h4><strong>Web Developer</strong>, GitHub <small>2013—present</small></h4>
-				<p>Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
-			</li>
+			<ul>
+				<li>
+					<h4><strong>Web Developer</strong>, GitHub <small>2013—present</small></h4>
+					<p>Building a user friendly interface that is easy for beginner programmers to use and learn the benefits of git.</p>
+				</li>
 
-			<li>
-				<h4><strong>Copy Editor</strong>, Complaint.ly <small>2012—2013</small></h4>
-				<p>Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)</p>
-			</li>
+				<li>
+					<h4><strong>Copy Editor</strong>, Complaint.ly <small>2012—2013</small></h4>
+					<p>Reviewed, organize and filed multiple complaints to neighbors, local stores, and government officials. (self employed)</p>
+				</li>
 
-			<li>
-				<h4><strong>Master Knitter</strong>, Christmas Sweater Org <small> 1992—2011</small></h4>
-				<p>Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p>
-			</li>
+				<li>
+					<h4><strong>Master Knitter</strong>, Christmas Sweater Org <small> 1992—2011</small></h4>
+					<p>Created delightful christmas sweaters for young boys and girls. Extremly gifted at weaving green, red and gold thread.</p>
+				</li>
 
-			<li>
-				<h4><strong>Senior Vice President</strong>, The Golden Girls Appreciation Society <small>1985—1992</small></h4>
-				<p>Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.
-				</p>
-			</li>
+				<li>
+					<h4><strong>Senior Vice President</strong>, The Golden Girls Appreciation Society <small>1985—1992</small></h4>
+					<p>Managed a team of three and over saw day to day operations at The Golden Girls Retirement Facility in Miami.
+					</p>
+				</li>
 
-			<li>
-				<h4><strong>Certified Mint Candy and Freshly Baked Cookies Distributor</strong> <small>1960</small></h4>
-				<p>Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p>
-			</li>
+				<li>
+					<h4><strong>Certified Mint Candy and Freshly Baked Cookies Distributor</strong> <small>1960</small></h4>
+					<p>Won multiple awards for my secret chocolate chip recipies. My grand children enjoy them too :)</p>
+				</li>
 
-		</ul>
+			</ul>
 		
-		<h3>Education</h3>
+			<h3>Education</h3>
 		
-		<ul>
+			<ul>
 
-			<li><strong>General Assembly</strong> WDI — 2013</li>
-			<li><strong>Queens College</strong> — B.A. 1923</li>
-			<li><strong>Brooklyn Etiquette School For Girls</strong> — 1920 (Honors)</li>
+				<li><strong>General Assembly</strong> WDI — 2013</li>
+				<li><strong>Queens College</strong> — B.A. 1923</li>
+				<li><strong>Brooklyn Etiquette School For Girls</strong> — 1920 (Honors)</li>
+
+			</ul>
 
 			<div class="verticalLine">
 
-		</ul>
+		</section>
+		</main>
+
+		<footer>
 		
 		<nav>
 			<a href="http://facebook.com/">Facebook</a>
@@ -75,6 +88,8 @@
 			|
 			<a href="http://linkedin.com/">LinkedIn</a>
 		</nav>
-				
+		
+		</footer>
+
 	</body>
 </html>
